# table-format

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  release.sh  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/table_format/: __init__.py  __main__.py  cli.py  version.py
tests/: __init__.py  test_cli.py  test_reformat.py
