##########################
# Setup.py Configuration #
##########################
[metadata]
name = table-format
version = 1.3.3
description = Format Python code (list of lists) as a fixed width table.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/spookylukey/table-format
download_url = https://github.com/spookylukey/table-format/releases
project_urls =
    Bug Tracker = https://github.com/spookylukey/table-format/issues
    Source Code = https://github.com/spookylukey/table-format

# Author information
author = Luke Plant
author_email = L.Plant.98@cantab.net
maintainer = Luke Plant
maintainer_email = L.Plant.98@cantab.net

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    # TODO add your topics from the Trove controlled vocabulary - see https://pypi.org/classifiers
keywords =
    table
    format
    fixed-width
    columns

[options]
install_requires =
    libcst
    ast_decompiler
    parsy

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest

[options.entry_points]
console_scripts =
    table-format = table_format.cli:main


[isort]
multi_line_output = 5
line_length=120
default_section=THIRDPARTY
skip=.tox,.ve,dist,build


[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    S101
    C901 # Quality, schmality
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    table_format
    tests
