[metadata]
name = table-format
version = 1.4.2
description = Format Python code (list of lists) as a fixed width table.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spookylukey/table-format
download_url = https://github.com/spookylukey/table-format/releases
project_urls =
    Bug Tracker = https://github.com/spookylukey/table-format/issues
    Source Code = https://github.com/spookylukey/table-format
author = Luke Plant
author_email = L.Plant.98@cantab.net
maintainer = Luke Plant
maintainer_email = L.Plant.98@cantab.net
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
keywords =
    table
    format
    fixed-width
    columns

[options]
install_requires =
    libcst
    ast_decompiler
    parsy
zip_safe = false
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest

[options.entry_points]
console_scripts =
    table-format = table_format.cli:main

[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    S101
    C901 # Quality, schmality
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    table_format
    tests
